# robot_commander

./: .gitignore  .pylintrc  CLAUDE.md  Cargo.toml  README.md  intrinsics.npz  pyproject.toml
.claude/skills/control-agent/: SKILL.md
.claude/skills/lint/: SKILL.md
python/robot_commander/: __init__.py  config.py  config.yaml
python/robot_commander/agent/: abstract_agent.py  agent.py  agent_server.py  ray_caster.py  types.py
python/robot_commander/binding_tests/: test_occupancy_map.py  test_path_planning.py
python/robot_commander/calibration/: intrinsics.py
python/robot_commander/camera/: calibrate_intrinsics.py  camera.py  capture_image.py  detect_tags.py  intrinsics.py  run_capture_images.py  run_tag_detector.py  tag_detector.py
python/robot_commander/claude_controller/: run_agent_command.py  run_agent_monitor.py
python/robot_commander/dashboard/: agent_camera.py  camera_widget.py  depth_widget.py  map_renderer.py  map_widget.py  payload_widget.py  qt_image_utils.py  run_dashboard.py  signal_lost.py  slideshow_window.py  status_bar.py  stencil_map_widget.py  window.py
python/robot_commander/debug_tools/: evaluate_depth.py  plot_depth_captures.py  plot_run_log.py  run_depth_capture_viewer.py  run_path_planner.py  sync_logs.py
python/robot_commander/depth_processing/: calibrated_depth_processor.py  calibration_ui.py  cone_depth_processor.py  cone_depth_rays.py  depth_capture.py  depth_frame.py  depth_planes.py  depth_processor.py  depth_rays.py  point_cloud.py  ransac.py  run_cone_depth_hover.py  run_depth_processor.py  ultrasonic_plane_validator.py
python/robot_commander/filtering/: heading_filter.py  kalman_filter.py
python/robot_commander/image_processing/: agent_stream_camera.py  calibrate_intrinsics.py  calibration_capture.py  camera.py  intrinsics.py  intrinsics_calibration.py  run_agent_camera_calibration.py  run_calibration.py  run_capture_images.py  (+1 more)
src/: lib.rs  main.rs  math.rs
src/core/: geometry_types.rs  min_heap.rs  mod.rs
src/occupancy_map/: mod.rs  occupancy_map.rs
src/path_planning/: a_star.rs  common.rs  mod.rs  theta_star.rs
(+82 files in other folders)
