[project]
name = "robot-commander"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["python"]
