[project]
name = "robot_commander"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "timm>=1.0.26",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "maturin>=1.12.6",
]

[project.optional-dependencies]
agent = [
    "grpcio>=1.73.0",
    "pyyaml>=6.0.3",
    "numpy>=1.26.0",
    "opencv-contrib-python>=4.13.0.92",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.setuptools.packages.find]
where = ["python"]
